Change as discussed in the 'select one (was: RE: svn commit: r391955 [5/5] - in /incubator/harmony/enhanced/...)' mail thread: switching to a single Base64 implementation. Removing unused ASN.1 and DefaultPolicy
git-svn-id: https://svn.apache.org/repos/asf/incubator/harmony/enhanced/classlib/trunk@393374 13f79535-47bb-0310-9956-ffa450edef68